loading animation small fixes

--- a/src/components/Loading.module.css
+++ b/src/components/Loading.module.css
@@ -34,7 +34,7 @@
   width: 7.5ch;
   height: 22px;
 
-  border: 2px solid;
+  border: 2px solid #333;
 
   position: relative;
   overflow: hidden;
